--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,10 @@
+@import "fonts";
 @import "uno";
 @import "container";
 @import 'page';
 @import 'head';
 @import "footer";
 @import "main";
+@import "aside";
+@import "card";
 
