--- a/src/styles/uno.scss
+++ b/src/styles/uno.scss
@@ -11,8 +11,9 @@ html {
 }
 
 body {
-  font: 1em 'Roboto Light', Helvetica, sans-serif;
+  font: 1em 'JetBrains Mono', Helvetica, sans-serif;
   //background: #d7e1f5;
-  color: #ffe;
+  background-color: rgb(36, 41, 46);
   height: 100%;
+
 }
