--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -6,6 +6,7 @@
   flex-grow: 2;
   justify-content: center;
   border: black 1px solid;
+  margin: 5px;
 }
 
 .card:hover {
@@ -15,4 +16,18 @@
 
 .card__container {
   padding: 2px 16px;
+}
+
+.card__logo {
+  background-image: url('../img/post-it.png');
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: center;
+  //margin: 0px;
+  padding: 5% ;
+  //padding-right: 5%;
+}
+
+.card__header {
+  display: flex;
 }
