--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -1,4 +1,4 @@
-.aside_main {
+.aside__main {
   //display: inline-block;
   //border: black 1px solid;
 padding: 10px;
@@ -6,14 +6,17 @@ padding: 10px;
     display: block;
   }
 
- textarea {
-   height: 25px;
-   background-color: lightgray;
-   color: white;
-   resize: none;
-   //padding-bottom: 20px;
-   color: black;
-   aria-label: "Search"
- }
 
+
+}
+
+
+.aside__main__label {
+  height: 25px;
+  background-color: lightgray;
+  color: white;
+  resize: none;
+  //padding-bottom: 20px;
+  color: black;
+  aria-label: "Search"
 }
