--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,10 +1,11 @@
-@import "fonts";
-@import "uno";
-@import "container";
+@import 'fonts';
+@import 'uno';
+@import 'container';
 @import 'page';
 @import 'head';
-@import "footer";
-@import "main";
-@import "aside";
-@import "card";
-@import "login";
+@import 'footer';
+@import 'main';
+@import 'aside';
+@import 'card';
+@import 'post';
+@import 'login';
