--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,5 +1,5 @@
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
   width: 40%;
@@ -10,9 +10,8 @@
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-
 
 .card__container {
   padding: 2px 16px;
@@ -23,9 +22,7 @@
   background-repeat: no-repeat;
   background-size: 20px;
   background-position: center;
-  //margin: 0px;
-  padding: 5% ;
-  //padding-right: 5%;
+  padding: 5%;
 }
 
 .card__header {
