--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -1,26 +1,23 @@
-.post__form {
+.postForm {
   position: fixed;
   top: 40%;
   left: 50%;
   width: 75%;
   transform: translate(-50%, -50%);
-
-  article {
-    height: 80%;
-  }
 }
 
-.post__form__textarea {
+.postForm__textarea {
+  margin: 7px 0;
   width: 100%;
   height: 300px;
 }
 
-.post__form__header {
+.postForm__header {
   width: 100%;
-  flex: content-box;
 }
 
-.post__form__footer {
+.postForm__footer {
+  margin: 7px 0;
   width: 100%;
   flex: content-box;
 }
