--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,10 +1,10 @@
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  border-radius: 5px; /* 5px rounded corners */
+  border-radius: 5px;
   width: 40%;
   flex-grow: 2;
-  justify-content: center;
+  justify-content: flex-start;
   border: black 1px solid;
   margin: 5px;
 }
@@ -18,11 +18,9 @@
 }
 
 .card__logo {
-  background-image: url('../img/post-it.png');
-  background-repeat: no-repeat;
-  background-size: 20px;
-  background-position: center;
-  padding: 5%;
+  width: 30px;
+  height: 30px;
+  margin: 10px;
 }
 
 .card__header {
