--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -5,7 +5,7 @@
   width: 100%;
   display: flex;
   padding: 15px;
-  align-items: center;
+  align-items: baseline;
 }
 
 .head__search__label {
@@ -18,18 +18,27 @@
   justify-content: center;
   flex-grow: 4;
   flex-shrink: 1;
+  align-items: baseline;
+}
 
-  a {
-    flex-grow: 1;
-    color: white;
-    text-decoration: none;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
+.head__link {
+  flex-grow: 1;
+  color: white;
+  text-decoration: none;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.head__logo {
+  flex-grow: 1;
+  color: white;
+  text-decoration: none;
+  margin-left: 10px;
+  margin-right: 10px;
+  position: relative;
 }
 
 .head__auth {
-  align-items: center;
   flex-direction: row;
   justify-content: right;
   width: 30%;
@@ -40,13 +49,6 @@
     color: white;
     text-decoration: none;
   }
-}
-
-.head__logo {
-  background-image: url('../img/post-it.png');
-  background-repeat: no-repeat;
-  background-size: 20px;
-  background-position: center;
 }
 
 .head__search {
