--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,11 +1,59 @@
-.login__form {
+.loginForm {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.login__form__table {
-  width: 20%;
-  background-color: white;
+.loginForm__box {
+  background: white;
+  width: 300px;
+  border-radius: 6px;
+  margin: 0 auto 0 auto;
+  padding: 0 0 20px 0;
+}
+
+.loginForm__title {
+  font-size: 1.5rem;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.loginForm__username {
+  background: #ecf0f1;
+  border: #ccc 1px solid;
+  border-bottom: #ccc 2px solid;
+  padding: 10px;
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 240px;
+  color: #aaa;
+  margin-top: 10px;
+  font-size: 1em;
+  border-radius: 4px;
+}
+
+.loginForm__btn {
+  background: #2ecc71;
+  width: 100px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: white;
+  border-radius: 4px;
+  border: #27ae60 1px solid;
+  text-align: center;
+  font-weight: 800;
+  font-size: 0.8em;
+}
+
+.loginForm__btn:hover {
+  background: #2cc06b;
+}
+
+.loginForm__action {
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 10%;
+  flex-wrap: wrap;
 }
