--- a/src/styles/uno.scss
+++ b/src/styles/uno.scss
@@ -14,4 +14,6 @@ body {
   font: 1em 'JetBrains Mono', Helvetica, sans-serif;
   background-color: rgb(36, 41, 46);
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
