--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -2,15 +2,15 @@
   margin: 5px;
 }
 
-.aside__main {
+.aside-main {
   padding: 10px;
 }
 
-.aside_link {
+.aside-main_link {
   display: block;
 }
 
-.aside__label {
+.aside-main__label {
   height: 25px;
   background-color: lightgray;
   resize: none;
