--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -19,7 +19,8 @@
   padding-top: 10px;
 }
 
-.loginForm__username {
+.loginForm__username,
+.loginForm__password {
   background: #ecf0f1;
   border: #ccc 1px solid;
   border-bottom: #ccc 2px solid;
@@ -33,7 +34,8 @@
   border-radius: 4px;
 }
 
-.loginForm__btn {
+.loginForm__btnSubmit,
+.loginForm__btnReset {
   background: #2ecc71;
   width: 100px;
   padding-top: 5px;
@@ -46,7 +48,8 @@
   font-size: 0.8em;
 }
 
-.loginForm__btn:hover {
+.loginForm__btnSubmit:hover,
+.loginForm__btnReset:hover {
   background: #2cc06b;
 }
 
