--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,14 +6,14 @@
   display: flex;
 }
 
-.main__posts {
+.mainPosts {
   display: flex;
   flex-flow: row wrap;
   flex: 1 1 10px;
   justify-content: end;
 }
 
-.main__footer {
+.mainFooter {
   display: flex;
   flex-flow: row;
   margin: 10px;
@@ -25,7 +25,7 @@
   flex-basis: auto;
 }
 
-.main__footer a {
+.mainFooter a {
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 30px;
