--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -6,19 +6,118 @@
   display: flex;
   padding: 15px;
   align-items: baseline;
+
+  @include phones {
+    flex-direction: column;
+  }
 }
 
-.head__search__label {
-  visibility: hidden;
+.headInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
+
+//.head__search__label {
+//  visibility: hidden;
+//}
 
 .head__nav {
-  width: 70%;
+  width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-grow: 4;
   flex-shrink: 1;
   align-items: baseline;
+  max-width: 900px;
+  flex-direction: row;
+
+  @include phones {
+    flex-direction: column;
+    display: none;
+  }
+}
+
+.head_burger {
+  background-color: #2cc06b;
+  display: none;
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  @include phones {
+    display: block;
+  }
+}
+.head__auth {
+  flex-direction: row;
+  justify-content: right;
+  width: 50%;
+  display: flex;
+  align-content: space-around;
+  float: right;
+
+  @include phones {
+    justify-content: left;
+    display: none;
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+
+    @include phones {
+      margin-left: 10px;
+    }
+  }
+}
+
+@include phones {
+  .head span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: red;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  }
+}
+
+.head_burger:checked {
+  & ~ .head__nav,
+  ~ .head__auth {
+    flex-direction: column;
+    display: contents;
+  }
+
+  & ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    // background: #232323;
+  }
+
+  & ~ .head__firstSpan {
+    transform: rotate(45deg) translate(0, -1px);
+  }
+  & ~ .head__mediumSpan {
+    opacity: 0;
+    background-color: #2cc06b;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  & ~ .head__lastSpan {
+    transform: rotate(-45deg) translate(0, -2px);
+  }
 }
 
 .head__link {
@@ -26,7 +125,8 @@
   color: white;
   text-decoration: none;
   margin-left: 10px;
-  margin-right: 10px;
+  //margin-right: 10px;
+  //float: left;
 }
 
 .head__logo {
@@ -36,18 +136,9 @@
   margin-left: 10px;
   margin-right: 10px;
   position: relative;
-}
 
-.head__auth {
-  flex-direction: row;
-  justify-content: right;
-  width: 30%;
-  display: flex;
-  align-content: space-around;
-
-  a {
-    color: white;
-    text-decoration: none;
+  @include phones {
+    display: none;
   }
 }
 
@@ -56,4 +147,9 @@
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
   margin-left: 30px;
+
+  @include phones {
+    width: 150px;
+    margin-right: auto;
+  }
 }
