--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -15,12 +15,8 @@
 .headInfo {
   display: flex;
   flex-direction: row;
-  align-items: baseline;
+  justify-content: center;
 }
-
-//.head__search__label {
-//  visibility: hidden;
-//}
 
 .head__nav {
   width: 100%;
@@ -55,6 +51,7 @@
     display: block;
   }
 }
+
 .head__auth {
   flex-direction: row;
   justify-content: right;
@@ -101,21 +98,17 @@
     display: contents;
   }
 
-  & ~ span {
-    opacity: 1;
-    transform: rotate(45deg) translate(-2px, -1px);
-    // background: #232323;
-  }
-
-  & ~ .head__firstSpan {
+  & ~ .head__burger .head__firstSpan {
     transform: rotate(45deg) translate(0, -1px);
   }
-  & ~ .head__mediumSpan {
+
+  & ~ .head__burger .head__mediumSpan {
     opacity: 0;
     background-color: #2cc06b;
     transform: rotate(0deg) scale(0.2, 0.2);
   }
-  & ~ .head__lastSpan {
+
+  & ~ .head__burger .head__lastSpan {
     transform: rotate(-45deg) translate(0, -2px);
   }
 }
@@ -149,7 +142,8 @@
   margin-left: 30px;
 
   @include phones {
-    width: 150px;
+    width: 100%;
     margin-right: auto;
+    margin-left: auto;
   }
 }
