add posts adaptive

--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -92,6 +92,10 @@
 }
 
 .head_burger:checked {
+  & ~ .headInfo {
+    display: none;
+  }
+
   & ~ .head__nav,
   ~ .head__auth {
     flex-direction: column;
