--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -34,14 +34,24 @@
   }
 }
 
+.head_burgerLabel {
+  font-size: 0.5rem;
+  color: #ecf0f1;
+  margin-bottom: 10px;
+  display: none;
+  @include phones {
+    display: block;
+  }
+}
+
 .head_burger {
   background-color: #2cc06b;
   display: none;
-  display: block;
+  //display: block;
   width: 40px;
   height: 32px;
   position: absolute;
-  top: -7px;
+  top: 15px;
   left: -5px;
   cursor: pointer;
   opacity: 0; /* hide this */
