add reader media and fix overflow-x

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,11 @@
   flex-direction: column;
   height: 100%;
   display: flex;
+
+  @include pads {
+    overflow-x: hidden ;
+  }
+
 }
 
 .mainPosts {
