--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -14,6 +14,10 @@
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: flex-start;
+
+    z-index: 0;
+    position: absolute
+
   }
 }
 
