--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -14,10 +14,8 @@
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: flex-start;
-
     z-index: 0;
-    position: absolute
-
+    position: absolute;
   }
 }
 
