--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -7,6 +7,10 @@
   justify-content: flex-start;
   border: black 1px solid;
   margin: 5px;
+
+  @include pads {
+    width: 100%;
+  }
 }
 
 .card:hover {
