fix merge conflict

--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -5,10 +5,17 @@
   width: 100%;
   display: flex;
   padding: 15px;
-  align-items: baseline;
+  align-items: flex-start;
 
   @include phones {
     flex-direction: column;
+  }
+  @include pads {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    z-index: 0;
+    position: absolute;
   }
 }
 
@@ -16,22 +23,6 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
-
-.head__nav {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  flex-grow: 4;
-  flex-shrink: 1;
-  align-items: baseline;
-  max-width: 900px;
-  flex-direction: row;
-
-  @include phones {
-    flex-direction: column;
-    display: none;
-  }
 }
 
 .head_burgerLabel {
@@ -44,20 +35,37 @@
   }
 }
 
+
+.head__nav {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  flex-grow: 4;
+  flex-shrink: 1;
+  align-items: baseline;
+  max-width: 900px;
+  flex-direction: row;
+
+  @include pads {
+    flex-direction: column;
+    display: none;
+  }
+}
+
 .head_burger {
   background-color: #2cc06b;
-  display: none;
-  //display: block;
+  //display: none;
+  display: block;
   width: 40px;
   height: 32px;
   position: absolute;
-  top: 15px;
+  top: -7px;
   left: -5px;
   cursor: pointer;
   opacity: 0; /* hide this */
   z-index: 2; /* and place it over the hamburger */
 
-  @include phones {
+  @include pads {
     display: block;
   }
 }
@@ -70,7 +78,7 @@
   align-content: space-around;
   float: right;
 
-  @include phones {
+  @include pads {
     justify-content: left;
     display: none;
   }
@@ -79,13 +87,13 @@
     color: white;
     text-decoration: none;
 
-    @include phones {
+    @include pads {
       margin-left: 10px;
     }
   }
 }
 
-@include phones {
+@include pads {
   .head span {
     display: block;
     width: 33px;
@@ -144,7 +152,7 @@
   margin-right: 10px;
   position: relative;
 
-  @include phones {
+  @include pads {
     display: none;
   }
 }
@@ -155,9 +163,14 @@
   color: white;
   margin-left: 30px;
 
-  @include phones {
+  @include pads {
     width: 100%;
     margin-right: auto;
     margin-left: auto;
+  }
+
+  @include phones {
+    margin-left: auto;
+    width: 100%;
   }
 }
