--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -4,7 +4,13 @@
   }
 }
 @mixin phones {
-  @media screen and (max-width: 300px) {
+  @media screen and (max-width: 350px) {
+    @content;
+  }
+}
+
+@mixin reader {
+  @media screen and (max-width: 420px) {
     @content;
   }
 }
