--- a/src/styles/head.scss
+++ b/src/styles/head.scss
@@ -25,6 +25,16 @@
   justify-content: center;
 }
 
+.head_burgerLabel {
+  font-size: 0.5rem;
+  color: #ecf0f1;
+  margin-bottom: 10px;
+  display: none;
+  @include phones {
+    display: block;
+  }
+}
+
 .head__nav {
   width: 100%;
   display: flex;
